Add metadata tags I always forget

--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-	<meta charset="utf-8">
-	<title>Title</title>
-	<link rel="stylesheet" href="stylesheet">
-	<p>
+  <meta charset="utf-8">
+  <title>Title</title>
+  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <meta name="description" content="" />
+  <meta name="keywords" content="" />
+  <meta name="robots" content="index, follow" />
+  <script type="text/javascript">document.documentElement.className += " js";</script>
+  <p>
 
