--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <meta charset="utf-8">
   <title>Title</title>
-  <link rel="stylesheet" href="css/reset.css" type="text/css">
+  <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/combo?2.7.0/build/reset-fonts/reset-fonts.css&2.7.0/build/base/base-min.css">
   <meta name="description" content="" />
   <meta name="keywords" content="" />
   <meta name="robots" content="index, follow" />
   <script type="text/javascript">document.documentElement.className += " js";</script>
-  <p>
 
+  <!-- content goes here, no body or closing html needed! -->
+  
