--- a/index.html
+++ b/index.html
@@ -13,3 +13,9 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.7.2/jquery-ui.min.js"></script>
 
+  <script type="text/javascript" src="js/jquery.jsonp-1.0.4.js"></script>
+  <script type="text/javascript" src="js/jquery.sparkline.js"></script>
+  <script type="text/javascript" src="js/jquery.sprintf.js"></script>
+  <script type="text/javascript" src="js/jquery.timer-1.2.2.js"></script>
+
+
