--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@
   <script type="text/javascript" src="js/jquery.jsonp-1.0.4.js"></script>
   <script type="text/javascript" src="js/jquery.sparkline.js"></script>
   <script type="text/javascript" src="js/jquery.sprintf.js"></script>
-  <script type="text/javascript" src="js/jquery.timer-1.2.2.js"></script>
+  <script type="text/javascript" src="js/jquery.timers-1.1.2.js"></script>
 
 
